--- a/treebolicClientsLib/build.gradle
+++ b/treebolicClientsLib/build.gradle
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-    implementation ('io.github.treebolic:treebolic-model:4.0-SNAPSHOT')
+    implementation ('io.github.treebolic:treebolic-model:4.0-0')
 
     implementation project(':treebolicAidl')
     implementation project(':treebolicServicesIface')
