--- a/treebolicOwlServices/build.gradle
+++ b/treebolicOwlServices/build.gradle
@@ -57,8 +57,8 @@ dependencies {
     implementation project(':treebolicParcel')
     // implementation project(':treebolicLibModel')
 
-    implementation 'io.github.treebolic:treebolic-model:4.0-SNAPSHOT'
-    implementation 'io.github.treebolic:provider-owl-sax:4.0-SNAPSHOT'
+    implementation 'io.github.treebolic:treebolic-model:4.0-0'
+    implementation 'io.github.treebolic:provider-owl-sax:4.0-0'
 
     implementation project(':commonLib')
     implementation project(':storageLib')
