--- a/treebolicServicesLib/build.gradle
+++ b/treebolicServicesLib/build.gradle
@@ -39,9 +39,9 @@ dependencies {
     implementation project(':treebolicServicesIface')
     implementation project(':treebolicClientsIface')
 
-    implementation('io.github.treebolic:treebolic-glue-iface:4.0-SNAPSHOT')
-    implementation('io.github.treebolic:treebolic-graph:4.0-SNAPSHOT')
-    implementation('io.github.treebolic:treebolic-mutable:4.0-SNAPSHOT')
+    implementation('io.github.treebolic:treebolic-glue-iface:4.0-0')
+    implementation('io.github.treebolic:treebolic-graph:4.0-0')
+    implementation('io.github.treebolic:treebolic-mutable:4.0-0')
 
     implementation 'androidx.core:core:1.9.0'
     implementation 'androidx.annotation:annotation:1.5.0'
