--- a/treebolicWordNetServices/build.gradle
+++ b/treebolicWordNetServices/build.gradle
@@ -57,9 +57,9 @@ dependencies {
     implementation project(':treebolicParcel')
     // implementation project(':treebolicLibModel')
 
-    implementation 'io.github.treebolic:treebolic-model:4.0-SNAPSHOT'
-    implementation 'io.github.treebolic:provider-wordnet-jwi:4.0-SNAPSHOT'
-    implementation 'io.github.treebolic:treebolic-loadbalancer:4.0-SNAPSHOT'
+    implementation 'io.github.treebolic:treebolic-model:4.0-0'
+    implementation 'io.github.treebolic:provider-wordnet-jwi:4.0-0'
+    implementation 'io.github.treebolic:treebolic-loadbalancer:4.0-0'
 
     implementation project(':commonLib')
     implementation project(':downloadLib')
