--- a/treebolicClientsIface/build.gradle
+++ b/treebolicClientsIface/build.gradle
@@ -17,13 +17,6 @@ android {
         multiDexEnabled true
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
     compileOptions {
         coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -32,7 +25,7 @@ android {
 }
 
 dependencies {
-    implementation('io.github.treebolic:treebolic-model:4.0-0')
+    implementation 'io.github.treebolic:treebolic-model:4.0-0'
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
 }
