--- a/treebolicClientsLib/build.gradle
+++ b/treebolicClientsLib/build.gradle
@@ -17,13 +17,6 @@ android {
         multiDexEnabled true
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-        }
-    }
-
     compileOptions {
         coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -32,7 +25,7 @@ android {
 }
 
 dependencies {
-    implementation ('io.github.treebolic:treebolic-model:4.0-0')
+    implementation 'io.github.treebolic:treebolic-model:4.0-0'
 
     implementation project(':treebolicAidl')
     implementation project(':treebolicServicesIface')
