--- a/treebolicFilesServices/src/main/AndroidManifest.xml
+++ b/treebolicFilesServices/src/main/AndroidManifest.xml
@@ -1,16 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          android:sharedUserId="org.treebolic.userId">
+	xmlns:tools="http://schemas.android.com/tools"
+	android:sharedUserId="org.treebolic.userId">
 
-	<permission android:name="org.treebolic.files.service.USE" android:protectionLevel="normal" android:label="Use service" />
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.WAKE_LOCK"/>
-	<uses-permission android:name="org.treebolic.files.service.USE"/>
+	<permission
+		android:name="org.treebolic.files.service.USE"
+		android:protectionLevel="normal"
+		android:label="Use service" />
+
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-permission android:name="org.treebolic.files.service.USE" />
 
 	<application
 		android:allowBackup="true"
@@ -26,8 +29,8 @@
 			android:exported="true"
 			android:label="@string/app_name">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				<category android:name="android.intent.category.LAUNCHER"/>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 
@@ -38,7 +41,7 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity"/>
+				android:value=".MainActivity" />
 		</activity>
 
 		<activity
@@ -48,7 +51,7 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity"/>
+				android:value=".MainActivity" />
 		</activity>
 
 		<activity
@@ -58,7 +61,7 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity"/>
+				android:value=".MainActivity" />
 		</activity>
 
 		<activity
@@ -68,7 +71,7 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity"/>
+				android:value=".MainActivity" />
 		</activity>
 
 		<service
@@ -81,8 +84,7 @@
 			android:permission="android.permission.BIND_JOB_SERVICE"
 			android:process="org.treebolic">
 			<intent-filter>
-				<action android:name="org.treebolic.service.action.MAKE_MODEL">
-				</action>
+				<action android:name="org.treebolic.service.action.MAKE_MODEL"></action>
 			</intent-filter>
 		</service>
 
@@ -94,7 +96,7 @@
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_aidl_bound_service"
 			android:permission="org.treebolic.files.service.USE"
-			android:process="org.treebolic"/>
+			android:process="org.treebolic" />
 
 		<service
 			android:name=".TreebolicFilesMessengerService"
@@ -104,7 +106,7 @@
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_messenger_bound_service"
 			android:permission="org.treebolic.files.service.USE"
-			android:process="org.treebolic"/>
+			android:process="org.treebolic" />
 
 	</application>
 
