--- a/treebolicOwlServices/src/main/AndroidManifest.xml
+++ b/treebolicOwlServices/src/main/AndroidManifest.xml
@@ -1,20 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          android:installLocation="auto"
-          android:sharedUserId="org.treebolic.userId">
+	xmlns:tools="http://schemas.android.com/tools"
+	android:installLocation="auto"
+	android:sharedUserId="org.treebolic.userId">
 
-	<permission android:name="org.treebolic.owl.service.USE" android:protectionLevel="normal" android:label="Use service" />
-	<uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER"/>
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.WAKE_LOCK"/>
-	<uses-permission android:name="org.treebolic.owl.service.USE"/>
+	<permission
+		android:name="org.treebolic.owl.service.USE"
+		android:protectionLevel="normal"
+		android:label="Use service" />
+
+	<uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-permission android:name="org.treebolic.owl.service.USE" />
 
 	<application
 		android:allowBackup="true"
@@ -30,8 +33,8 @@
 			android:exported="true"
 			android:label="@string/app_name">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				<category android:name="android.intent.category.LAUNCHER"/>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 
@@ -43,7 +46,7 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity"/>
+				android:value=".MainActivity" />
 		</activity>
 
 		<activity
@@ -54,7 +57,7 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity"/>
+				android:value=".MainActivity" />
 		</activity>
 
 		<activity
@@ -64,7 +67,7 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity"/>
+				android:value=".MainActivity" />
 		</activity>
 
 		<activity
@@ -74,7 +77,7 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity"/>
+				android:value=".MainActivity" />
 		</activity>
 
 		<activity
@@ -84,7 +87,7 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity"/>
+				android:value=".MainActivity" />
 		</activity>
 
 		<service
@@ -97,8 +100,7 @@
 			android:permission="android.permission.BIND_JOB_SERVICE"
 			android:process="org.treebolic">
 			<intent-filter>
-				<action android:name="org.treebolic.service.action.MAKE_MODEL">
-				</action>
+				<action android:name="org.treebolic.service.action.MAKE_MODEL"></action>
 			</intent-filter>
 		</service>
 
@@ -110,7 +112,7 @@
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_aidl_bound_service"
 			android:permission="org.treebolic.owl.service.USE"
-			android:process="org.treebolic"/>
+			android:process="org.treebolic" />
 
 		<service
 			android:name=".TreebolicOwlMessengerService"
@@ -120,7 +122,7 @@
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_messenger_bound_service"
 			android:permission="org.treebolic.owl.service.USE"
-			android:process="org.treebolic"/>
+			android:process="org.treebolic" />
 
 	</application>
 
