--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
-android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.enableJetifier=false
+android.nonFinalResIds=false
+android.nonTransitiveRClass=false
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx2048m
+org.gradle.unsafe.configuration-cache=true
