--- a/treebolicFilesServices/src/main/AndroidManifest.xml
+++ b/treebolicFilesServices/src/main/AndroidManifest.xml
@@ -83,7 +83,7 @@
 			android:permission="android.permission.BIND_JOB_SERVICE"
 			android:process="org.treebolic">
 			<intent-filter>
-				<action android:name="org.treebolic.service.action.MAKE_MODEL"></action>
+				<action android:name="org.treebolic.service.action.MAKE_MODEL" />
 			</intent-filter>
 		</service>
 
