--- a/treebolicWordNetServices/src/main/AndroidManifest.xml
+++ b/treebolicWordNetServices/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
 		android:label="Use service"
 		android:protectionLevel="normal" />
 
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="18" />
 	<uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="org.treebolic.wordnet.service.USE" />
 
