upgrade AGP update dependecies compileSdk instead of compileSdkVersion

--- a/treebolicClientsIface/build.gradle
+++ b/treebolicClientsIface/build.gradle
@@ -8,7 +8,7 @@ android {
 
     namespace "org.treebolic.clients.iface"
 
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdk rootProject.ext.compileSdk
 
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
