--- a/treebolicWordNetServices/build.gradle
+++ b/treebolicWordNetServices/build.gradle
@@ -12,7 +12,7 @@ android {
 
     namespace "org.treebolic.wordnet.service"
 
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdk rootProject.ext.compileSdk
 
     defaultConfig {
         applicationId "org.treebolic.wordnet.service"
@@ -67,7 +67,7 @@ dependencies {
     implementation project(':donateLib')
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.preference:preference:1.2.0'
+    implementation 'androidx.preference:preference:1.2.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'org.apache.commons:commons-compress:1.21'
 
