--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.0'
+        classpath 'com.android.tools.build:gradle:8.1.2'
     }
 }
 
@@ -25,14 +25,16 @@ allprojects {
         versionName = '0.1'
         minSdkVersion = 14
         targetSdkVersion = 33
-        compileSdk = 33
+        compileSdk = 34
         multiDexEnabled = true
     }
 
     gradle.projectsEvaluated {
-        tasks.withType(JavaCompile) {
-            options.compilerArgs << "-Xlint:deprecation"
-            options.compilerArgs << "-Xlint:unchecked"
+        tasks.withType(JavaCompile).tap {
+            configureEach {
+                options.compilerArgs << "-Xlint:deprecation"
+                options.compilerArgs << "-Xlint:unchecked"
+            }
         }
     }
 }
