--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jul 07 10:00:15 CEST 2021
-sdk.dir=/opt/androidsdk
+#Wed Oct 18 17:49:07 CEST 2023
 ndk.dir=/opt/androidsdk/ndk-bundle
+sdk.dir=/opt/androidstudio/sdk
