--- a/treebolicWordNetServices/src/main/AndroidManifest.xml
+++ b/treebolicWordNetServices/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
 		android:fullBackupContent="@xml/backup_descriptor"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
+		android:roundIcon="@mipmap/ic_launcher_round"
 		android:theme="@style/MyTheme"
 		tools:ignore="AllowBackup">
 
@@ -45,8 +46,7 @@
 		<activity
 			android:name=".SettingsActivity"
 			android:label="@string/title_activity_settings"
-			android:parentActivityName=".MainActivity"
-			tools:targetApi="jelly_bean">
+			android:parentActivityName=".MainActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value=".MainActivity" />
@@ -56,8 +56,7 @@
 			android:name=".QueryProviderActivity"
 			android:exported="false"
 			android:label="@string/title_activity_query_file_provider"
-			android:parentActivityName=".MainActivity"
-			tools:targetApi="jelly_bean">
+			android:parentActivityName=".MainActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value=".MainActivity" />
@@ -67,8 +66,7 @@
 			android:name=".DownloadActivity"
 			android:exported="false"
 			android:label="@string/title_activity_download"
-			android:parentActivityName=".MainActivity"
-			tools:targetApi="jelly_bean">
+			android:parentActivityName=".MainActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value=".MainActivity" />
@@ -77,8 +75,7 @@
 		<activity
 			android:name="com.bbou.others.OthersActivity"
 			android:exported="false"
-			android:parentActivityName=".MainActivity"
-			tools:targetApi="jelly_bean">
+			android:parentActivityName=".MainActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value=".MainActivity" />
@@ -87,8 +84,7 @@
 		<activity
 			android:name="com.bbou.donate.DonateActivity"
 			android:exported="false"
-			android:parentActivityName=".MainActivity"
-			tools:targetApi="jelly_bean">
+			android:parentActivityName=".MainActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value=".MainActivity" />
