--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 18 17:49:07 CEST 2023
+#Tue Nov 28 11:31:15 CET 2023
 ndk.dir=/opt/androidsdk/ndk-bundle
-sdk.dir=/opt/androidstudio/sdk
+sdk.dir=/opt/androidsdk
