--- a/treebolicOwlServices/src/main/AndroidManifest.xml
+++ b/treebolicOwlServices/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 	tools:targetApi="tiramisu">
 
 	<permission
-		android:name="org.treebolic.owl.service.USE"
+		android:name="org.treebolic.service.USE"
 		android:label="Use service"
 		android:protectionLevel="normal" />
 
@@ -23,7 +23,7 @@
 	<uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<uses-permission android:name="org.treebolic.owl.service.USE" />
+	<uses-permission android:name="org.treebolic.service.USE" />
 
 	<application
 		android:allowBackup="true"
@@ -33,7 +33,8 @@
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/MyTheme">
+		android:theme="@style/MyTheme"
+		tools:ignore="AllowBackup">
 
 		<activity
 			android:name=".MainActivity"
@@ -67,6 +68,7 @@
 		<activity
 			android:name="org.treebolic.filechooser.FileChooserActivity"
 			android:exported="false"
+			android:label="@string/title_activity_filechooser"
 			android:parentActivityName=".MainActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
@@ -91,14 +93,26 @@
 				android:value=".MainActivity" />
 		</activity>
 
+		<receiver
+			android:name=".TreebolicOwlBroadcastService"
+			android:description="@string/description_service_broadcast_service"
+			android:enabled="true"
+			android:exported="true"
+			android:label="@string/service_broadcast_service"
+			android:permission="org.treebolic.service.USE">
+			<intent-filter>
+				<action android:name="org.treebolic.service.action.MAKE_MODEL" />
+			</intent-filter>
+		</receiver>
+
 		<service
-			android:name=".TreebolicOwlIntentService"
-			android:description="@string/description_service_intent_service"
+			android:name=".TreebolicOwlBroadcastService"
+			android:description="@string/description_service_broadcast_service"
 			android:enabled="true"
 			android:exported="true"
 			android:icon="@mipmap/ic_launcher"
-			android:label="@string/service_intent_service"
-			android:permission="android.permission.BIND_JOB_SERVICE"
+			android:label="@string/service_broadcast_service"
+			android:permission="org.treebolic.service.USE"
 			android:process="org.treebolic">
 			<intent-filter>
 				<action android:name="org.treebolic.service.action.MAKE_MODEL" />
@@ -112,8 +126,12 @@
 			android:exported="true"
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_aidl_bound_service"
-			android:permission="org.treebolic.owl.service.USE"
-			android:process="org.treebolic" />
+			android:permission="org.treebolic.service.USE"
+			android:process="org.treebolic">
+			<intent-filter>
+				<action android:name="org.treebolic.service.action.MAKE_MODEL" />
+			</intent-filter>
+		</service>
 
 		<service
 			android:name=".TreebolicOwlMessengerService"
@@ -122,8 +140,12 @@
 			android:exported="true"
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_messenger_bound_service"
-			android:permission="org.treebolic.owl.service.USE"
-			android:process="org.treebolic" />
+			android:permission="org.treebolic.service.USE"
+			android:process="org.treebolic">
+			<intent-filter>
+				<action android:name="org.treebolic.service.action.MAKE_MODEL" />
+			</intent-filter>
+		</service>
 
 	</application>
 
