--- a/treebolicOwlServices/src/main/AndroidManifest.xml
+++ b/treebolicOwlServices/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
 		tools:ignore="AllowBackup">
 
 		<activity
-			android:name=".MainActivity"
+			android:name="org.treebolic.owl.MainActivity"
 			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -46,51 +46,51 @@
 		</activity>
 
 		<activity
-			android:name=".SettingsActivity"
+			android:name="org.treebolic.owl.SettingsActivity"
 			android:exported="false"
 			android:label="@string/title_activity_settings"
-			android:parentActivityName=".MainActivity">
+			android:parentActivityName="org.treebolic.owl.MainActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity" />
+				android:value="org.treebolic.owl.MainActivity" />
 		</activity>
 
 		<activity
-			android:name=".DownloadActivity"
+			android:name="org.treebolic.owl.DownloadActivity"
 			android:exported="false"
 			android:label="@string/title_activity_download"
-			android:parentActivityName=".MainActivity">
+			android:parentActivityName="org.treebolic.owl.MainActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity" />
+				android:value="org.treebolic.owl.MainActivity" />
 		</activity>
 
 		<activity
 			android:name="org.treebolic.filechooser.FileChooserActivity"
 			android:exported="false"
 			android:label="@string/title_activity_choose"
-			android:parentActivityName=".MainActivity">
+			android:parentActivityName="org.treebolic.owl.MainActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity" />
+				android:value="org.treebolic.owl.MainActivity" />
 		</activity>
 
 		<activity
 			android:name="com.bbou.others.OthersActivity"
 			android:exported="false"
-			android:parentActivityName=".MainActivity">
+			android:parentActivityName="org.treebolic.owl.MainActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity" />
+				android:value="org.treebolic.owl.MainActivity" />
 		</activity>
 
 		<activity
 			android:name="com.bbou.donate.DonateActivity"
 			android:exported="false"
-			android:parentActivityName=".MainActivity">
+			android:parentActivityName="org.treebolic.owl.MainActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity" />
+				android:value="org.treebolic.owl.MainActivity" />
 		</activity>
 
 		<receiver
