change app namespace so we can snap them into former plugin googleplay site

--- a/treebolicFilesServices/build.gradle
+++ b/treebolicFilesServices/build.gradle
@@ -10,7 +10,7 @@ keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
 
-    namespace "org.treebolic.files.service"
+    namespace "org.treebolic.files"
 
     compileSdk rootProject.ext.compileSdk
 
