--- a/treebolicWordNetServices/build.gradle
+++ b/treebolicWordNetServices/build.gradle
@@ -71,8 +71,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'org.apache.commons:commons-compress:1.25.0'
 
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
-    implementation "androidx.multidex:multidex:2.0.1"
+    implementation "androidx.multidex:multidex:${multiDexVersion}"
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${desugaringVersion}"
 
     constraints {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
