--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.4'
+        classpath 'com.android.tools.build:gradle:8.2.0'
     }
 }
 
@@ -27,6 +27,8 @@ allprojects {
         targetSdkVersion = 33
         compileSdk = 34
         multiDexEnabled = true
+        desugaringVersion = "2.0.4"
+        multiDexVersion = "2.0.1"
     }
 
     gradle.projectsEvaluated {
