--- a/treebolicClientsIface/build.gradle
+++ b/treebolicClientsIface/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     implementation 'io.github.treebolic:treebolic-model:4.1-3'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
+
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${desugaringVersion}"
 }
