--- a/treebolicClientsLib/build.gradle
+++ b/treebolicClientsLib/build.gradle
@@ -36,4 +36,6 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.annotation:annotation:1.7.0'
+
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${desugaringVersion}"
 }
