--- a/treebolicParcel/build.gradle
+++ b/treebolicParcel/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation project(':treebolicGlue')
     implementation 'androidx.annotation:annotation:1.7.0'
 
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${desugaringVersion}"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
