--- a/treebolicServicesLib/build.gradle
+++ b/treebolicServicesLib/build.gradle
@@ -45,4 +45,6 @@ dependencies {
 
     implementation 'androidx.core:core:1.12.0'
     implementation 'androidx.annotation:annotation:1.7.0'
+
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${desugaringVersion}"
 }
