--- a/treebolicClientsIface/build.gradle
+++ b/treebolicClientsIface/build.gradle
@@ -25,7 +25,7 @@ android {
 }
 
 dependencies {
-    implementation 'io.github.treebolic:treebolic-model:4.1-3'
+    implementation "io.github.treebolic:treebolic-model:${treebolicVersion}"
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
 
