--- a/treebolicFilesServices/build.gradle
+++ b/treebolicFilesServices/build.gradle
@@ -49,8 +49,8 @@ android {
 }
 
 dependencies {
-    implementation 'io.github.treebolic:treebolic-model:4.1-3'
-    implementation 'io.github.treebolic:provider-files:4.1-3'
+    implementation "io.github.treebolic:treebolic-model:${treebolicVersion}"
+    implementation "io.github.treebolic:provider-files:${treebolicVersion}"
 
     implementation project(':treebolicServicesIface')
     implementation project(':treebolicServicesLib')
