--- a/treebolicOwlServices/build.gradle
+++ b/treebolicOwlServices/build.gradle
@@ -49,8 +49,8 @@ android {
 }
 
 dependencies {
-    implementation 'io.github.treebolic:treebolic-model:4.1-3'
-    implementation 'io.github.treebolic:provider-owl-sax:4.1-3'
+    implementation "io.github.treebolic:treebolic-model:${treebolicVersion}"
+    implementation "io.github.treebolic:provider-owl-sax:${treebolicVersion}"
 
     implementation project(':treebolicOwlProvider')
     implementation project(':treebolicServicesIface')
