--- a/treebolicParcel/build.gradle
+++ b/treebolicParcel/build.gradle
@@ -36,8 +36,8 @@ android {
 }
 
 dependencies {
-    implementation 'io.github.treebolic:treebolic-model:4.1-3'
-    implementation 'io.github.treebolic:treebolic-mutable:4.1-3'
+    implementation "io.github.treebolic:treebolic-model:${treebolicVersion}"
+    implementation "io.github.treebolic:treebolic-mutable:${treebolicVersion}"
 
     implementation project(':treebolicGlue')
     implementation 'androidx.annotation:annotation:1.7.0'
