--- a/treebolicServicesIface/build.gradle
+++ b/treebolicServicesIface/build.gradle
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-    implementation 'io.github.treebolic:treebolic-model:4.1-3'
+    implementation "io.github.treebolic:treebolic-model:${treebolicVersion}"
 
     implementation project(':treebolicParcel')
     implementation project(':treebolicIface')
