--- a/treebolicServicesLib/build.gradle
+++ b/treebolicServicesLib/build.gradle
@@ -32,9 +32,9 @@ android {
 }
 
 dependencies {
-    implementation 'io.github.treebolic:treebolic-glue-iface:4.1-3'
-    implementation 'io.github.treebolic:treebolic-graph:4.1-3'
-    implementation 'io.github.treebolic:treebolic-mutable:4.1-3'
+    implementation "io.github.treebolic:treebolic-glue-iface:${treebolicVersion}"
+    implementation "io.github.treebolic:treebolic-graph:${treebolicVersion}"
+    implementation "io.github.treebolic:treebolic-mutable:${treebolicVersion}"
 
     implementation project(':treebolicParcel')
     implementation project(':treebolicIface')
