--- a/treebolicServicesLib/build.gradle
+++ b/treebolicServicesLib/build.gradle
@@ -29,6 +29,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    buildFeatures {
+        buildConfig true
+    }
 }
 
 dependencies {
@@ -44,7 +48,7 @@ dependencies {
     implementation project(':treebolicClientsIface')
 
     implementation 'androidx.core:core:1.12.0'
-    implementation 'androidx.annotation:annotation:1.7.0'
+    implementation 'androidx.annotation:annotation:1.7.1'
 
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${desugaringVersion}"
 }
