--- a/treebolicServicesIface/build.gradle
+++ b/treebolicServicesIface/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 
     implementation project(':treebolicParcel')
     implementation project(':treebolicIface')
-    implementation project(':treebolicAidl')
+    // implementation project(':treebolicAidl')
     implementation project(':treebolicClientsIface')
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
