comment necessary AIDL dependency

--- a/treebolicClientsLib/build.gradle
+++ b/treebolicClientsLib/build.gradle
@@ -27,7 +27,7 @@ android {
 dependencies {
     implementation "io.github.treebolic:treebolic-model:${treebolicVersion}"
 
-    implementation project(':treebolicAidl')
+    implementation project(':treebolicAidl') // needed
     implementation project(':treebolicServicesIface')
     implementation project(':treebolicClientsIface')
     implementation project(':treebolicIface')
