--- a/treebolicServicesIface/build.gradle
+++ b/treebolicServicesIface/build.gradle
@@ -3,6 +3,7 @@
  */
 
 apply plugin: 'com.android.library'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
 
@@ -26,8 +27,12 @@ android {
 
     compileOptions {
         coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = '17'
     }
 }
 
@@ -36,11 +41,12 @@ dependencies {
 
     implementation project(':treebolicParcel')
     implementation project(':treebolicIface')
-    // implementation project(':treebolicAidl')
     implementation project(':treebolicClientsIface')
 
     implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'androidx.annotation:annotation:1.8.0'
+    implementation 'androidx.annotation:annotation:1.8.1'
+
+    implementation 'androidx.core:core-ktx:1.13.1'
 
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${desugaringVersion}"
 }
