--- a/treebolicWordNetServices/build.gradle
+++ b/treebolicWordNetServices/build.gradle
@@ -3,6 +3,7 @@
  */
 
 apply plugin: 'com.android.application'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
 def keystoreProperties = new Properties()
@@ -41,14 +42,18 @@ android {
         }
     }
 
-    compileOptions {
-        coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
     buildFeatures {
         buildConfig true
+    }
+
+    compileOptions {
+        coreLibraryDesugaringEnabled true
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = '17'
     }
 }
 
@@ -75,6 +80,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'org.apache.commons:commons-compress:1.26.2'
 
+    implementation 'androidx.core:core-ktx:1.13.1'
     implementation "androidx.multidex:multidex:${multiDexVersion}"
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${desugaringVersion}"
 }
