--- a/treebolicOwlServices/build.gradle
+++ b/treebolicOwlServices/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     implementation project(':donateLib')
 
     implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'androidx.preference:preference:1.2.1'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
     implementation 'com.google.android.material:material:1.12.0'
 
     implementation 'androidx.core:core-ktx:1.13.1'
