--- a/treebolicServicesLib/build.gradle
+++ b/treebolicServicesLib/build.gradle
@@ -52,8 +52,8 @@ dependencies {
     implementation project(':treebolicServicesIface')
     implementation project(':treebolicClientsIface')
 
-    implementation 'androidx.core:core:1.13.1'
-    implementation 'androidx.annotation:annotation:1.8.1'
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.annotation:annotation:1.8.2'
 
     implementation 'androidx.core:core-ktx:1.13.1'
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${desugaringVersion}"
