--- a/treebolicFilesServices/src/main/AndroidManifest.xml
+++ b/treebolicFilesServices/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
 	<application
 		android:allowBackup="true"
 		android:dataExtractionRules="@xml/data_extraction_rules"
+		android:enableOnBackInvokedCallback="true"
 		android:fullBackupContent="@xml/backup_descriptor"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
